language/move-prover/tests/sources/functional/resources.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/resources.move:40:6 ───
    │
 40 │      ensures exists<R>(sender());
    │      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/resources.move:33:5: create_resource_incorrect (entry)
    =     at tests/sources/functional/resources.move:34:9: create_resource_incorrect
    =     at tests/sources/functional/resources.move:33:5: create_resource_incorrect (exit)
